Implement harvester pylon